--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.27.0",
     "@toolpad/core": "^0.12.0",
+    "aos": "^2.3.4",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
