--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@devexpress/dx-react-scheduler": "^4.0.10",
+    "@devexpress/dx-react-scheduler-material-ui": "^4.0.10",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
@@ -18,8 +20,10 @@
     "@mui/x-date-pickers": "^7.27.0",
     "@toolpad/core": "^0.12.0",
     "aos": "^2.3.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
